<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/surveyContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity">

    <RadioGroup
        android:id="@+id/radioGroupSurvey"
        android:layout_width="409dp"
        android:layout_height="428dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surveyQuestion"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioCoaster"
            android:layout_width="270dp"
            android:layout_height="82dp"
            android:drawableStart="@drawable/saurus100"
            android:drawablePadding="10dp"
            android:text="@string/radioButton1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioRaft"
            android:layout_width="270dp"
            android:layout_height="82dp"
            android:drawableStart="@drawable/raft100"
            android:drawablePadding="10dp"
            android:text="@string/RadioButton2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioChute"
            android:layout_width="270dp"
            android:layout_height="82dp"
            android:drawableStart="@drawable/chutes100"
            android:drawablePadding="10dp"
            android:text="@string/RadioButton3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBarn"
            android:layout_width="270dp"
            android:layout_height="82dp"
            android:drawableStart="@drawable/barn100"
            android:drawablePadding="10dp"
            android:text="@string/radioButton4"
            android:textSize="18sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>